--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.mvc.converters.preferred-json-mapper=jackson
 # Enable Hibernate logging
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+jwt.secretKey=TaqlmGv1iEDMRiFp/pHuID1+T84IABfuA0xXh4GhiUI=
+jwt.expiration=2592000
